<resources>
    <string name="app_name">Finpo</string>
    <string name="login_to_kakao">카카오톡으로 로그인</string>
    <string name="login_to_google">Google 계정으로 로그인</string>
    <string name="intro_progress_text">%d/6</string>
    <string name="please_agree_terms_conditions">약관에 동의해주세요</string>
    <string name="agree_all">약관 전체 동의</string>
    <string name="agree_terms_conditions">이용약관 동의</string>
    <string name="essential">필수</string>
    <string name="agree_personal_info">개인정보 수집 및 이용 동의</string>
    <string name="choice">선택</string>
    <string name="agree_marketing">마케팅 정보 수신 동의</string>
    <string name="please_input_default_info">기본 정보를 입력해주세요</string>
    <string name="please_input_edit_info">수정할 회원 정보를\n입력해주세요</string>
    <string name="name">이름</string>
    <string name="nickname">닉네임</string>
    <string name="birth">생년월일</string>
    <string name="gender">성별</string>
    <string name="female">여성</string>
    <string name="male">남성</string>
    <string name="female_eng">FEMALE</string>
    <string name="male_eng">MALE</string>
    <string name="birth_hint">예)2022-05-26</string>
    <string name="please_input_under_13">13자 이하만 가능해요</string>
    <string name="is_overlap_nickname">중복된 닉네임입니다</string>
    <string name="living_area_text">%s님이 거주하고 있는\n지역은 어디인가요?</string>
    <string name="where_you_live">어디 사시나요...? &#128064;</string>
    <string name="no_selected_area">선택한 곳이 없어요...&#128517;</string>
    <string name="show_only_one_living_area">거주 지역은 하나만 선택할 수 있어요</string>
    <string name="interest_text">%s님의\n관심 분야를 선택해주세요</string>
    <string name="interest">관심 분야&#160;</string>
    <string name="select_multi">(복수 선택)</string>
    <string name="job">일자리</string>
    <string name="stability">생활 안정</string>
    <string name="education">교육 문화</string>
    <string name="participation">참여 공간</string>
    <string name="register_complete">가입이 완료되었어요!</string>
    <string name="additional_data">현재 상태와 이용 목적,\n추가 관심 지역을 선택하러 가볼까요?</string>
    <string name="input_additional_info">추가 정보 입력하기</string>
    <string name="intro_text">내 지원금은 내가 챙기자!</string>
    <string name="skip">나중에 할게요</string>
    <string name="status_purpose_text">%s님의 현재 상태와\n이용 목적을 선택해주세요</string>
    <string name="please_additional_region">추가로 원하는\n지역을 선택해주세요</string>
    <string name="can_select_max">최대 %d개까지 선택할 수 있어요!</string>
    <string name="overlap_region">이미 선택된 지역입니다!</string>
    <string name="find_policy">핀포와 함께\n정책을 찾으러 가볼까요?</string>
    <string name="home">홈</string>
    <string name="community">커뮤니티</string>
    <string name="alarm">알람</string>
    <string name="my_page">마이페이지</string>
    <string name="interests">관심사</string>
    <string name="select_interest_region">관심 지역 선택</string>
    <string name="interest_list">관심 목록</string>
    <string name="participation_list">참여 목록</string>
    <string name="nickname_title">%s님</string>
    <string name="setting">설정</string>
    <string name="edit_my_info">내 정보 수정</string>
    <string name="receive_advertising_info">광고성 정보 수신</string>
    <string name="community_rule">커뮤니티 이용 수칙</string>
    <string name="report_reason">신고 이유</string>
    <string name="terms">이용 약관</string>
    <string name="ask">문의하기</string>
    <string name="personal_info">개인정보 처리 방침</string>
    <string name="open_source">오픈 소스 라이브러리</string>
    <string name="logout">로그아웃</string>
    <string name="withdrawal">회원 탈퇴</string>
    <string name="kakao_eng">KAKAO</string>
    <string name="google_eng">GOOGLE</string>
    <string name="search_policy">청년정책을 검색해보세요</string>
    <string name="region_text">%s %s</string>
    <string name="preparing">준비중</string>
    <string name="status">현재 상태</string>
    <string name="purpose">이용 목적&#160;</string>
    <string name="sort">정렬</string>
    <string name="recent">최신순</string>
    <string name="popular">인기순</string>
    <string name="filter">필터</string>
    <string name="clear_all">모두 초기화</string>
    <string name="select_region">지역 선택</string>
    <string name="add_region_search">추가할 지역을 선택하기</string>
    <string name="do_filter">필터링하기</string>
    <string name="select_finish">선택 완료</string>
    <string name="hits_interest_num">스크랩수 %d · 조회수 %d</string>
    <string name="policy_type">정책 유형</string>
    <string name="support_content">지원 내용</string>
    <string name="institution">주최/주관기관</string>
    <string name="support_scale">지원 규모</string>
    <string name="apply_period">지원 기간</string>
    <string name="hyphen">-</string>
    <string name="operation_period">운영 기간</string>
    <string name="apply_site">신청 사이트</string>
    <string name="shortcut">바로가기</string>
    <string name="process">신청 절차</string>
    <string name="select_interest_region_please">%s님의\n관심 지역을 선택해주세요</string>
    <string name="select_living_region_please">%s님이 현재 거주하고 있는\n지역을 선택해주세요</string>
    <string name="bookmark">북마크</string>
    <string name="user_name">%s님은</string>
    <string name="user_interest_num">개의 정책에 관심이 있네요!</string>
    <string name="user_participation_num">개의 정책에 참여했네요!</string>
    <string name="interest_category_alarm">관심 분야 알림 설정</string>
    <string name="region_alarm">지역 알림 설정</string>
    <string name="notification_all">전체 알림</string>
    <string name="setting_interest_category">관심 분야 알림 설정</string>
    <string name="setting_region_alarm">지역 알림 설정</string>
    <string name="add_title">이 정책에 참여하셨나요?</string>
    <string name="add_body">마이페이지에서 내가 참여한\n정책들을 편하게 찾아볼 수 있어요</string>
    <string name="add_button">참여했어요</string>
    <string name="complete_add">참여 정책 목록에 추가했어요</string>
    <string name="complete_body1">추가한 참여 정책은</string>
    <string name="complete_body2">마이페이지</string>
    <string name="complete_body3">에서 확인할 수 있어요</string>
    <string name="write_memo">메모 작성하기</string>
    <string name="close">닫기</string>
    <string name="memo_hint">정책을 참여한 날짜, 이유 등 메모를 남겨보세요</string>
    <string name="write_memo_title">메모 작성</string>
    <string name="edit_memo_title">메모 수정</string>
    <string name="write">작성하기</string>
    <string name="edit">수정하기</string>
    <string name="setting_interest">관심사 설정</string>
    <string name="finish">완료</string>
    <string name="bookmark_max_msg">북마크는 최대 20개까지 추가할 수 있어요!</string>
    <string name="scrap_max_msg">스크랩은 최대 20개까지 추가할 수 있어요!</string>
    <string name="participation_max_msg">참여 정책은 최대 20개까지 추가할 수 있어요!</string>
    <string name="policy_count">개의 정책 결과</string>
    <string name="community_count">개의 글</string>
    <string name="input_content">내용을 입력해주세요</string>
    <string name="perparation_msg">준비 중입니다!</string>
    <string name="noti_additional_policy_title">&#160;정책이 떴어요!</string>
    <string name="noti_additional_comment_title">&#160;글에 댓글이 달렸어요</string>
    <string name="noti_additional_comment_reply_title">&#160;글에 대댓글이 달렸어요</string>
    <string name="empty_alarm_title">도착한 알람이 없어요...</string>
    <string name="empty_alarm_subtitle">원하는 지역의 관심 분야\n청년정책 알림을 제공해드립니다</string>
    <string name="modified">(수정됨)</string>
    <string name="like_comment_hits_num">좋아요 %d · 댓글 %d · 조회수 %d</string>
    <string name="unknownUser">(알 수 없음)</string>
    <string name="comment_num">개의 댓글</string>
    <string name="int_to_string">%d</string>
    <string name="writer">(글쓴이)</string>
    <string name="comment_hint">댓글을 입력해주세요</string>
    <string name="edit_post">글 수정하기</string>
    <string name="delete_post">글 삭제하기</string>
    <string name="delete">삭제하기</string>
    <string name="report">신고하기</string>
    <string name="edit_short">수정</string>
    <string name="select_report">신고 사유 선택</string>
    <string name="cancel">취소</string>
    <string name="search_community_hint">제목이나 내용을 검색해주세요</string>
    <string name="please_search_community">게시판의 글을 검색해보세요</string>
    <string name="empty_my_writing">아직 쓴 글이 없네요...\n커뮤니티에 글을 쓰러 가볼까요?</string>
    <string name="empty_my_comment">아직 단 댓글이 없네요...\n커뮤니티에 댓글을 달러 가볼까요?</string>
    <string name="empty_my_bookmark">아직 스크랩한 글이 없네요...\n커뮤니티에 스크랩 하러 가볼까요?</string>
    <string name="receive_comment">댓글 알림</string>
    <string name="block">차단하기</string>
    <string name="open_api">오픈 API</string>
    <string name="cannot_like_my_post">내가 쓴 글은 좋아요할 수 없습니다</string>
    <string name="empty_report">신고 받은 내역이 없어요</string>
    <string name="skip_eng">Skip</string>
    <string name="start">시작하기</string>
    <string name="onboarding1_title">전국 청년 정책을 한 곳에</string>
    <string name="onboarding1_subtitle">시군구별 청년정책 검색 가능</string>
    <string name="onboarding2_title">관심분야\n청년정책만 모아서</string>
    <string name="onboarding2_subtitle">세부 카테고리 별로 필터링</string>
    <string name="onboarding3_title">참여하거나 관심있는\n청년정책 스크랩</string>
    <string name="onboarding3_subtitle">마이페이지로 편리하게 저장 및 관리</string>
    <string name="onboarding4_title">후기나 관련 정보\n인사이트 공유</string>
    <string name="onboarding4_subtitle">청년만을 위한 커뮤니티 공간 제공</string>
    <string name="etc">기타</string>
    <string name="reply">답글달기</string>
    <string name="reply_nickname">%s님에게 답글 남기는 중...</string>
    <string name="deleted_comment">(삭제된 댓글입니다)</string>

    <!-- url -->
    <string name="privacy_url">https://sites.google.com/view/finpo-privacy/</string>
    <string name="terms_url">https://sites.google.com/view/finpo-terms/</string>
    <string name="ask_url">https://forms.gle/29dvEJfe6S2GK6xh8</string>
    <string name="community_rule_url">https://sites.google.com/view/finpo-community-rule/</string>
    <string name="category_all">분야 전체</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="over_14">만 14세 이상입니다.</string>
    <string name="anonymous">익명</string>
</resources>