<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="reportType"
            type="com.finpo.app.utils.ConstantsKt" />

        <variable
            name="viewModel"
            type="com.finpo.app.ui.community.detail.CommunityDetailViewModel" />

        <variable
            name="data"
            type="com.finpo.app.model.remote.CommentContent" />
    </data>

    <LinearLayout
        android:layout_width="78dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_solid_w01_rounded_shadow_5"
        android:orientation="vertical"
        android:paddingStart="12dp"
        android:paddingTop="12dp"
        android:paddingEnd="12dp"
        android:paddingBottom="4dp">

        <TextView
            android:id="@+id/tv_edit_comment"
            style="@style/label3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:onClick="@{() -> viewModel.editComment(data)}"
            android:text="@string/edit"
            android:visibility="@{data.isMine ? View.VISIBLE : View.GONE}" />

        <TextView
            android:id="@+id/tv_delete_comment"
            style="@style/label3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:onClick="@{() -> viewModel.showDeleteCommentDialog(data)}"
            android:text="@string/delete"
            android:visibility="@{data.isMine ? View.VISIBLE : View.GONE}" />

        <TextView
            android:id="@+id/tv_reply_comment"
            style="@style/label3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/reply"
            android:onClick="@{() -> viewModel.setReplyMode(data.id, data.user.nickname)}"
            android:visibility="@{data.isMine ? View.VISIBLE : View.GONE}" />


        <TextView
            android:id="@+id/tv_report_comment"
            style="@style/label3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:onClick="@{() -> viewModel.showReportDialog(reportType.COMMENT, data.id)}"
            android:text="@string/report"
            android:visibility="@{data.isMine ? View.GONE : View.VISIBLE}" />

        <TextView
            android:id="@+id/tv_block_comment"
            style="@style/label3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:onClick="@{() -> viewModel.showBlockDialog(reportType.COMMENT, data.id)}"
            android:text="@string/block"
            android:visibility="@{data.isMine ? View.GONE : View.VISIBLE}" />

    </LinearLayout>
</layout>