<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.finpo.app.ui.setting.SettingViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/page_top_padding"
            tools:context=".ui.setting.SettingFragment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="45dp">

                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:onClick="@{() -> viewModel.backClick()}"
                    android:src="@drawable/ic_back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_title"
                    style="@style/header5"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/bg_ripple_borderline_g05"
                    android:gravity="center"
                    android:text="@string/setting"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_edit_my_info"
                style="@style/header5"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_ripple_borderline_g05"
                android:clickable="true"
                android:focusable="true"
                android:gravity="start|center"
                android:onClick="@{() -> viewModel.editMyInfoClick()}"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/edit_my_info" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_receive_advertising_info"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_ripple_borderline_g05"
                android:gravity="start|center"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <TextView
                    style="@style/header5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/receive_advertising_info"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/sc_ad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:checked="@={viewModel.isAcceptedMarketingAlarm}"
                    android:onClick="@{() -> viewModel.clickMarketingAlarm()}"
                    android:thumb="@drawable/selector_switch_thumb"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:track="@drawable/shape_switch_background" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_receive_comment"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_ripple_borderline_g05"
                android:gravity="start|center"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <TextView
                    style="@style/header5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/receive_comment"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/sc_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:checked="@={viewModel.isAcceptedCommunityAlarm}"
                    android:onClick="@{() -> viewModel.clickCommentAlarm()}"
                    android:thumb="@drawable/selector_switch_thumb"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:track="@drawable/shape_switch_background" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_interest_alarm"
                style="@style/header5"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_ripple_borderline_g05"
                android:clickable="true"
                android:focusable="true"
                android:gravity="start|center"
                android:onClick="@{() -> viewModel.goToInterestAlarmSettingFragment()}"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/interest_category_alarm" />

            <TextView
                android:id="@+id/tv_region_alarm"
                style="@style/header5"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_ripple_borderline_g05"
                android:clickable="true"
                android:focusable="true"
                android:gravity="start|center"
                android:onClick="@{() -> viewModel.goToRegionAlarmSettingFragment()}"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/region_alarm" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_community_rule"
                    style="@style/header5"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_ripple_borderline_g05"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="start|center"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/community_rule"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_community_rule_url"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:autoLink="web"
                    android:linksClickable="true"
                    android:text="@string/community_rule_url"
                    android:textColor="@android:color/transparent"
                    android:textColorLink="@android:color/transparent"
                    app:layout_constraintBottom_toBottomOf="@id/tv_community_rule"
                    app:layout_constraintEnd_toEndOf="@id/tv_community_rule"
                    app:layout_constraintStart_toStartOf="@id/tv_community_rule"
                    app:layout_constraintTop_toTopOf="@id/tv_community_rule" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_report_reason"
                style="@style/header5"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_ripple_borderline_g05"
                android:clickable="true"
                android:focusable="true"
                android:gravity="start|center"
                android:onClick="@{() -> viewModel.reportReasonClick()}"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/report_reason" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_terms"
                    style="@style/header5"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_ripple_borderline_g05"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="start|center"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/terms"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_terms_url"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:autoLink="web"
                    android:linksClickable="true"
                    android:text="@string/terms_url"
                    android:textColor="@android:color/transparent"
                    android:textColorLink="@android:color/transparent"
                    app:layout_constraintBottom_toBottomOf="@id/tv_terms"
                    app:layout_constraintEnd_toEndOf="@id/tv_terms"
                    app:layout_constraintStart_toStartOf="@id/tv_terms"
                    app:layout_constraintTop_toTopOf="@id/tv_terms" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_ask"
                    style="@style/header5"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_ripple_borderline_g05"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="start|center"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/ask"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_ask_url"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:autoLink="web"
                    android:linksClickable="true"
                    android:text="@string/ask_url"
                    android:textColor="@android:color/transparent"
                    android:textColorLink="@android:color/transparent"
                    app:layout_constraintBottom_toBottomOf="@id/tv_ask"
                    app:layout_constraintEnd_toEndOf="@id/tv_ask"
                    app:layout_constraintStart_toStartOf="@id/tv_ask"
                    app:layout_constraintTop_toTopOf="@id/tv_ask" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_personal_info"
                    style="@style/header5"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_ripple_borderline_g05"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="start|center"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/personal_info"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_privacy_url"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:autoLink="web"
                    android:linksClickable="true"
                    android:text="@string/privacy_url"
                    android:textColor="@android:color/transparent"
                    android:textColorLink="@android:color/transparent"
                    app:layout_constraintBottom_toBottomOf="@id/tv_personal_info"
                    app:layout_constraintEnd_toEndOf="@id/tv_personal_info"
                    app:layout_constraintStart_toStartOf="@id/tv_personal_info"
                    app:layout_constraintTop_toTopOf="@id/tv_personal_info" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_open_source"
                style="@style/header5"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_ripple_borderline_g05"
                android:clickable="true"
                android:focusable="true"
                android:gravity="start|center"
                android:onClick="@{() -> viewModel.openSourceClick()}"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/open_source" />

            <TextView
                android:id="@+id/tv_open_api"
                style="@style/header5"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_ripple_borderline_g05"
                android:clickable="true"
                android:focusable="true"
                android:gravity="start|center"
                android:onClick="@{() -> viewModel.openApiClick()}"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/open_api" />

            <TextView
                android:id="@+id/tv_logout"
                style="@style/header5"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_ripple_borderline_g05"
                android:clickable="true"
                android:focusable="true"
                android:gravity="start|center"
                android:onClick="@{() -> viewModel.logoutClick()}"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/logout" />

            <TextView
                android:id="@+id/tv_withdrawal"
                style="@style/header5"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_ripple_borderline_g05"
                android:clickable="true"
                android:focusable="true"
                android:gravity="start|center"
                android:onClick="@{() -> viewModel.withdrawalClick()}"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/withdrawal"
                android:textColor="@color/gray_g03" />


        </LinearLayout>
    </ScrollView>
</layout>