<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="reportType"
            type="com.finpo.app.utils.ConstantsKt" />

        <variable
            name="viewModel"
            type="com.finpo.app.ui.community_detail.CommunityDetailViewModel" />

        <variable
            name="data"
            type="com.finpo.app.model.remote.WritingContent" />
    </data>

    <LinearLayout
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_solid_w01_rounded_shadow_5"
        android:orientation="vertical"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingTop="12dp"
        android:paddingBottom="4dp">

        <TextView
            android:id="@+id/tv_edit_post"
            style="@style/label3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/edit_post"
            android:onClick="@{() -> viewModel.editPostClick()}"
            android:visibility="@{data.isMine ? View.VISIBLE : View.GONE}" />

        <TextView
            android:id="@+id/tv_delete_post"
            style="@style/label3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/delete_post"
            android:onClick="@{() -> viewModel.deletePostClick()}"
            android:visibility="@{data.isMine ? View.VISIBLE : View.GONE}" />

        <TextView
            android:id="@+id/tv_report_post"
            style="@style/label3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:onClick="@{() -> viewModel.showReportDialog(reportType.POST, data.id)}"
            android:text="@string/report"
            android:visibility="@{data.isMine ? View.GONE : View.VISIBLE}" />

    </LinearLayout>
</layout>